--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,15 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
-    background-color: rgb(255, 0, 0);
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    background-color: #ff0000;
+    color: #333;
+    padding: 20px;
 }
 
 .menu-horizontal{
